# cargo-outdated

./: .clog.toml  .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci-pr.yml  ci.yml  deploy.yml  lint.yml  rust.yml
src/: cli.rs  config.rs  error.rs  fmt.rs  lockfile.rs  macros.rs  main.rs  util.rs
src/cargo_files/: dependency_tree.rs  lockfile.rs  manifest.rs  mod.rs
src/cargo_ops/: elaborate_workspace.rs  mod.rs  pkg_status.rs  temp_project.rs
tests/: cli.rs
tests/cmd/: basic.stderr  basic.trycmd
