[package]
name = "cargo-outdated"
version = "0.9.18"
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Frederick Z. <frederick888@tsundere.moe>",
    "Ricky H. <ricky.hosfelt@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2018"
exclude = ["*.png"]
keywords = [
    "cargo",
    "subcommand",
    "dependencies",
    "cargo-subcommand",
    "deps",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kbknapp/cargo-outdated.git"
description = "Cargo subcommand for displaying when dependencies are out of date"

[badges]
travis-ci = {repository = "kbknapp/cargo-outdated"}

[[bin]]
name = "cargo-outdated"

[dependencies]
anyhow = "1.0"
cargo = "0.57.0"
docopt = "1.1.0"
env_logger = "0.9.0"
git2-curl = "0.14.0"
semver = "1.0.0"
serde = {version="1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
serde_json = "1.0.56"
tabwriter = "1.2.1"
tempfile = "3"
toml = "~0.5.0"

[dependencies.termcolor]
optional = true
version = "1.0"

[features]
debug = ["termcolor"]
vendored-openssl = ["cargo/vendored-openssl"]
default = []

[profile.release]
lto = true
