[package]
name = "cargo-outdated"
version = "0.17.0"
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Frederick Z. <frederick888@tsundere.moe>",
    "Ricky H. <ricky.hosfelt@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2021"
exclude = ["*.png"]
keywords = [
    "cargo",
    "subcommand",
    "dependencies",
    "cargo-subcommand",
    "deps",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kbknapp/cargo-outdated.git"
description = "Cargo subcommand for displaying when dependencies are out of date"
rust-version = "1.83.0" # MSRV

[[bin]]
name = "cargo-outdated"

[dependencies]
anyhow = "1.0"
cargo = "0.87.0"
env_logger = "0.11.5"
git2-curl = "0.21.0"
semver = "1.0.0"
serde = {version="1.0.114", features = ["derive"]}
serde_json = "1.0.56"
tabwriter = "1.2.1"
tempfile = "3.6"
toml = "0.8.6"
clap = { version = "4.1.4", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
rustc-hash = "2.0"

[features]
debug = []
vendored-openssl = ["cargo/vendored-openssl"]
default = []

[profile.release]
lto = true

[dev-dependencies]
pretty_assertions = "1.2.0"
